--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
-<link re="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-
-<title>  Registration Form</title>
-</head> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration Form</title>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <div class="container">
-        <header>ICFC Youth Summer Camp Registration Form <br>dates here</header>
-            
-            <form action="#">
-                <div class="Form first">
-                    <div class="details personal ">
-                        <span class="title">Personal Camper Details</span>
+        <header>National Easter Convention 2024 <br>Deadline Feb 28th</header>
+        <form action="#">
+            <div class="form first">
+                <div class="details personal">
+                    <span class="title">Personal Camper Details</span>
 
-                        <div class="fields">
-                            <div class="input field">
-                                <label>Last Name </label>
-                                <input type="text" placeholder="Enter your name">
-                            </div>
+                    <div class="fields">
+                        <div class="input-field">
+                            <label>Last Name</label>
+                            <input type="text" placeholder="Enter last name" required>
+                        </div>
+
+                        <div class="input-field">
+                            <label>First Name</label>
+                            <input type="text" placeholder="Enter first name" required>
+                        </div>
+
+                        <div class="input-field">
+                            <label>Date of Birth</label>
+                            <input type="date" placeholder="Enter your birthdate" required>
+                        </div>
+
+                        <!-- Additional input fields -->
+                        <div class="input-field">
+                            <label>Email</label>
+                            <input type="email" placeholder="Enter your email" required>
+                        </div>
+                        <div class="input-field">
+                            <label>Mobile Number</label>
+                            <input type="tel" placeholder="Enter your phone number" required>
+                        </div>
+                        <div class="input-field">
+                            <label>Allergy Info</label>
+                            <input type="text" placeholder="Enter any allergies" required>
                         </div>
                     </div>
                 </div>
+            </div>
+        </form>
     </div>
-
-
-
-
 </body>
+</html>
